--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         L’édition et la direction de la publication de l'application Pleaf est assurée par Etienne ANNE, domicilié en France.
     </p>
     <p>
-        ARTICLE 2 : ACCÈS AU JEU
+        ARTICLE 2 : ACCÈS A L'APPLICATION
         L'application Pleaf permet à l'Utilisateur un accès gratuit.
         L'application est accessible gratuitement en tout lieu à tout Utilisateur ayant un accès à Internet. Tous les
         frais supportés par l'Utilisateur pour accéder au service (matériel informatique, logiciels, connexion Internet, etc.) sont à sa charge.
@@ -27,6 +27,12 @@
         ARTICLE 3 : COLLECTE DES DONNÉES
         L'application est exempté de déclaration à la Commission Nationale Informatique et Libertés (CNIL) dans la
         mesure où il ne collecte aucune donnée concernant les Utilisateurs autre que son email pour se connecter.
+        
+        Les données utilisées concernant l'identité de l'utilisateur sont :
+            - une adresse email
+        Les autres données sont utilisés pour l'application :
+            - nom des souhaits ajoutés
+            - images misent sur les souhaits
     </p>
     <p>
         ARTICLE 4 : PROPRIÉTÉ INTELLECTUELLE
